# argos

./: .coverage  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  argos-agent.spec  cost_ab.py  flake.nix  index.html  main.py  package.json  pnpm-lock.yaml  pyproject.toml  smoke_packaged.py  vite.config.ts
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: bump-homebrew-formula.yml  bump-winget-manifest.yml  ci.yml  publish.yml  release.yml
.superpowers/sdd/: task-1.1-report.md
agent/: argos-agent-aarch64-apple-darwin.spec  argos-agent.spec  cost_decompose.py  probe.py  pyproject.toml  run_server.py
agent/argos_agent/: approval.py  config.py  core.py  fanout.py  isolation.py  llm_embed.py  mcp_client.py  memory.py  orchestrator.py  playwright_tools.py  run_registry.py  runtime.py  server.py  skills.py  tools.py  verify_gate.py  web.py
agent/argos_agent/skills_builtin/: git-commit-hygiene.md
agent/tests/: test_approval.py  test_concurrency.py  test_fanout.py  test_isolation.py  test_mcp_client.py  test_middleware.py  test_orchestrator.py  test_plan_schema.py  test_provider.py  test_resume.py  test_runtime.py  test_runtime_context.py  test_server_approval.py  test_server_mcp.py  test_server_plan.py  test_server_skills.py  test_session.py  test_skills.py  test_tools.py  test_tools_all_contains_playwright.py  test_verify_gate.py  test_web.py  test_worker.py
argos/: __init__.py  __main__.py  app_factory.py  approval.py  browser.py  config.py  config_base.py  contracts.py  external_surfaces.py  git_worktree.py  i18n.py  mcp_native.py  runtime.py  setup_wizard.py  skills.py  web.py
argos/_pyinstaller_hooks/: hook-smolagents.py  hook-textual.py
argos/capability/: __init__.py  builtins.py  manifest.py  registry.py
argos/cli/: context.py  dream.py  eval.py  headless.py  pkg.py  skills.py
argos/conductor/: __init__.py  cronlite.py  engine.py  orders.py  proposals.py  triggers.py
argos/context/: __init__.py  analyzer.py  prune.py  render.py  threshold.py  tokens.py
argos/core/: __init__.py  harness.py  honesty.py  loop.py  models.py  observability.py  plan_mode.py  protocols.py  recovery.py  snapshot.py  types.py  verify_gate.py  vision_capability.py
argos/daemon/: __init__.py  __main__.py  attachments_wire.py  client.py  conductor_supervisor.py  events.py  index.py  manager.py  protocol.py  registry.py  server.py  sessions.py  socket.py  state_machine.py  store.py  supervision.py  worker.py  worktree.py
argos/eval/: __init__.py  compare.py  results.py  runner.py
argos/hooks/: __init__.py  config.py  events.py  matcher.py  payload.py  runner.py  schema.py
argos/input/: __init__.py  attachments.py  clipboard_image.py  recorder.py  stt.py  stt_config.py
argos/intent/: __init__.py  card.py  engine.py
argos/learning/: candidates.py  distiller.py  dream.py  hook.py  promotion_gate.py  reflection.py
argos/ledger/: __init__.py  builder.py  entry.py  store.py  summary.py
argos/locales/: __init__.py  cli.py  common.py  conductor.py  core.py  core2.py  daemon.py  daemon2.py  data.py  evalx.py  infra.py  misc.py  perception.py  permissions.py  permissions2.py  sandbox.py  tools.py  tui_app.py  verify.py  widgets.py  workflow.py
argos/lsp/: __init__.py  config.py  events.py  manager.py  schema.py  tools.py
argos/memory/: __init__.py  auto.py  consolidate.py  embedding.py  store.py
argos/perception/: __init__.py  actions.py  executor.py
argos/permissions/: __init__.py  audit.py  autonomy.py  config.py  evaluator.py  events.py  hard_rules.py  schema.py  secrets.py  trust_dial.py
argos/protocol/: __init__.py  (+2 more)
argos_agent/: __init__.py  __main__.py  app_factory.py  approval.py  browser.py  config.py  contracts.py  isolation.py  jsonl_log.py  llm_embed.py  mcp_client.py  mcp_native.py  memory.py  plan_schema.py  planner.py  reducer.py  runtime.py  server.py  setup_wizard.py  skills.py  web.py  worker.py
desktop/shell/src-tauri/: Cargo.toml  tauri.conf.json
desktop/shell/src-tauri/icons/: icon.icns
desktop/shell/src-tauri/src/: bridge.rs  commands.rs  lib.rs  main.rs  state.rs
docs/: acceptance-checklist.md  argos-product-definition.md  argos-v6-design.md  auto-memory.md  context-lens-demo-script.md  context-viz.md  dream.md  eval.md  i18n.md  multirun.md  packaging-c.md  per-task-routing.md  setup-wizard.md  skills-curator.md  voice-image-input.md
examples/: quickstart.md
packaging/: Info.plist  argos.spec  build_arm64.sh  build_desktop.sh  build_linux.sh  build_windows.sh  desktop.md  install-deb.sh  install.sh
scripts/: _i18n_leak_scan.py  best_of_n_demo.py  pzero-ab.mjs  record-demo.sh  swarm-ab-minimax.py  swarm-domain2.py  swarm-hybrid-minimax.py  sync_output_demo.py  tb_pass_at_1_benchmark.py  tui_v3_screenshots.py
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
tests/: computer_control_probe.py  conftest.py  test_activity_approval.py  test_activity_panel.py  test_add_dir.py  test_app_factory.py  test_app_factory_backend.py  test_app_version.py  test_approval.py  test_approval_bridge_spike.py  test_approval_levels.py  test_argos_binary_version.py  test_argos_self_update_cmd.py  test_argos_version.py  test_async_recall.py  test_audit_log.py  test_broker_computer_artifact.py  test_broker_execute_sync.py  test_broker_receipt_unforgeable.py  test_broker_registry_dispatch.py  test_broker_request.py  test_broker_request_blocking.py  test_browser.py  test_capability_stt_egress.py  test_claude_md_walker.py  test_cli_dream.py  test_cli_setup.py  test_code_action_block.py  test_computer_tools_reachable.py  test_concurrency.py  test_config_argos_keys.py  test_config_base.py  test_config_loader.py  test_config_multimodal.py  test_console_scripts.py  test_context_analyzer.py  test_context_cli.py  test_context_e2e.py  test_context_prune.py  test_context_render.py  (+238 more)
(+567 files in other folders)
