[project]
name = "argos-agent"
version = "0.1.0"
description = "Argos — 诚实可靠的终端编码超级智能体(自建 CodeAct 引擎 + verify 硬门禁 + OS 沙箱)"
readme = "README.md"
requires-python = ">=3.12"
# 活引擎 framework-free:只依赖 smolagents(沙箱执行器)+ textual(TUI)+ httpx(模型/网络)
# + 记忆/检索栈。2026-06-05 砍掉死栈:langchain*/langgraph*/fastapi/uvicorn(旧 Tauri sidecar,
# binary 早已 exclude,详见 CHANGELOG)。
dependencies = [
    "ddgs>=8.0.0",
    "httpx[socks]>=0.28.1",
    "mlx-embeddings>=0.1.0",
    "numpy>=2.4.6",
    "playwright>=1.60.0",
    "smolagents>=1.26.0",
    "sqlite-vec>=0.1.9",
    "textual>=8.2.7",
    "trafilatura>=2.0.0",
]

[project.scripts]
argos = "argos_agent.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["argos_agent"]

[dependency-groups]
dev = [
    "pygls>=1.3.0",
    "pyinstaller>=6.20.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
]

[tool.pytest.ini_options]
# 让测试能 import argos_agent(脚本式项目,包未安装)。
pythonpath = ["."]
testpaths = ["tests"]
# 80% 覆盖门(spec §9)。注:跑测试子集时总覆盖会低于门 → 以全量 `uv run pytest` 为准。
addopts = "--cov=argos_agent --cov-report=term-missing --cov-fail-under=80"
markers = [
    "slow: 真进程/真 pyright e2e,默认 skip(uv run pytest -m 'not slow' 跑快测)",
]

[tool.coverage.run]
omit = [
    # 诚实排除(非凑数,理由在侧):
    "argos_agent/_pyinstaller_hooks/*",        # 打包 hook,逻辑由 build/smoke 验证,无单测
    "argos_agent/sandbox/_sandbox_child.py",   # 跑在 Seatbelt 子进程,父进程 coverage 测不到(沙箱 e2e 真覆盖)
]
