[project]
name = "argos-agent"
version = "0.1.0"
description = "Argos — 诚实可靠的终端编码超级智能体(自建 CodeAct 引擎 + verify 硬门禁 + OS 沙箱)"
readme = "README.md"
requires-python = ">=3.12"
# 活引擎 framework-free:只依赖 smolagents(沙箱执行器)+ textual(TUI)+ httpx(模型/网络)
# + 记忆/检索栈。2026-06-05 砍掉死栈:langchain*/langgraph*/fastapi/uvicorn(旧 Tauri sidecar,
# binary 早已 exclude,详见 CHANGELOG)。
dependencies = [
    "ddgs>=8.0.0",
    "httpx[socks]>=0.28.1",
    "mlx-embeddings>=0.1.0",
    "numpy>=2.4.6",
    "playwright>=1.60.0",
    "smolagents>=1.26.0",
    "sqlite-vec>=0.1.9",
    "textual>=8.2.7",
    "trafilatura>=2.0.0",
]
# C 阶段(2026-06-07)加 PyPI 元数据 + spec D1/D9/D14 锁:license/authors/classifiers/urls
license = {text = "MIT"}
authors = [
  {name = "tungoldshou", email = "tungoldshou@users.noreply.github.com"},
]
keywords = ["agent", "ai", "cli", "terminal", "codeact", "verifier", "sandbox", "tui"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Environment :: Console :: Curses",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: POSIX :: Linux",
  "Operating System :: Microsoft :: Windows :: Windows 10",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Code Generators",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.scripts]
argos = "argos_agent.__main__:main"
# C 阶段(2026-06-07)加打包工具 dispatcher(spec D8);主 argos 启动 0 影响
argospkg = "argos_agent.cli.pkg:main"

[project.urls]
Homepage = "https://github.com/tungoldshou/argos"
Repository = "https://github.com/tungoldshou/argos"
Issues = "https://github.com/tungoldshou/argos/issues"
Changelog = "https://github.com/tungoldshou/argos/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["argos_agent"]

# C 阶段(2026-06-07)显式 sdist include:wheel 自动收 *.py,但 sdist 要列数据文件
# (schema.sql / skills_builtin / packaging/VERSION) — 否则 pip install --no-binary 装不起来
[tool.hatch.build.targets.sdist]
include = [
  "argos_agent",
  "README.md",
  "LICENSE",
  "CHANGELOG.md",
  "packaging/VERSION",
  "packaging/Info.plist",
  "packaging/argos.spec",
]
exclude = [
  "tests",
  "build",
  "dist",
  "docs",
  "*.egg-info",
  ".venv",
  ".pytest_cache",
  ".codegraph",
  ".coverage",
]

[dependency-groups]
dev = [
    "pygls>=1.3.0",
    "pyinstaller>=6.20.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
]

[tool.pytest.ini_options]
# 让测试能 import argos_agent(脚本式项目,包未安装)。
pythonpath = ["."]
testpaths = ["tests"]
# 80% 覆盖门(spec §9)。注:跑测试子集时总覆盖会低于门 → 以全量 `uv run pytest` 为准。
addopts = "--cov=argos_agent --cov-report=term-missing --cov-fail-under=80"
markers = [
    "slow: 真进程/真 pyright e2e,默认 skip(uv run pytest -m 'not slow' 跑快测)",
]

[tool.coverage.run]
omit = [
    # 诚实排除(非凑数,理由在侧):
    "argos_agent/_pyinstaller_hooks/*",        # 打包 hook,逻辑由 build/smoke 验证,无单测
    "argos_agent/sandbox/_sandbox_child.py",   # 跑在 Seatbelt 子进程,父进程 coverage 测不到(沙箱 e2e 真覆盖)
]
