[project]
name = "argos-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ddgs>=8.0.0",
    "fastapi>=0.136.3",
    "httpx[socks]>=0.28.1",
    "langchain>=1.3.2",
    "langchain-anthropic>=1.4.4",
    "langchain-mcp-adapters>=0.2.2",
    "langchain-openai>=0.3.0",
    "langgraph>=1.2.2",
    "numpy>=2.4.6",
    "trafilatura>=2.0.0",
    "uvicorn[standard]>=0.48.0",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.20.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
]

[tool.pytest.ini_options]
# 让测试能 import argos_agent(脚本式项目,包未安装)。
pythonpath = ["."]
testpaths = ["tests"]
