[package]
name = "argos"
version = "0.1.0"
description = "Argos — desktop hero interface for the Hermes agent"
authors = ["you"]
edition = "2021"

[lib]
name = "argos_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
dirs = "5"
thiserror = "1"
uuid = { version = "1", features = ["v4"] }
