[package]
name = "argos-shell"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "argos_shell_lib"
# Desktop-only: cdylib for Tauri's dynamic loading, rlib so main.rs can call run().
# staticlib is only needed for iOS mobile targets — omit here to avoid
# duplicate-macro compilation errors from Tauri's #[command] proc-macro.
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "argos-shell"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri 2 core — minimal features for the walking skeleton.
# Shell plugin is NOT included here; the bridge communicates
# with argosd over its existing Unix socket — no shell spawning needed.
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Unix-domain-socket HTTP client
# ──────────────────────────────────────────────────────────────────────────
# reqwest does NOT support Unix domain sockets.
# hyperlocal 0.9 provides a Connector that adapts tokio's UnixStream into
# hyper's HTTP stack without any network exposure.
# Dependency choice rationale (notes for packager):
#   - hyper 1.x + hyper-util required for hyperlocal 0.9 compat
#   - No openssl/rustls needed — all traffic is local UDS
#   - hyperlocal pulls in hyper 1.x transitively; we pin here to avoid
#     version conflicts with tauri's own hyper usage
hyperlocal = "0.9"
hyper = { version = "1", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["client", "client-legacy", "http1", "tokio"] }
http-body-util = "0.1"
tokio = { version = "1", features = ["full"] }
bytes = "1"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
